my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
  annotations:
    cert-manager.io/Clusterissuer: letsencrypt-nginx
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - www.oluwayemioluwasesan.me
      secretName: letsencrypt-nginx-private-key

  ingressClassName: nginx
  rules:
    - host: www.oluwayemioluwasesan.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80





# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: combined-ingress
#   namespace: sock-shop
#   annotations:
#     # cert-manager.io/Clusterissuer: letsencrypt-staging
#     kubernetes.io/ingress.class: nginx
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: www.oluwayemioluwasesan.me
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: front-end
#                 port:
#                   number: 80
    - host: prometheus.oluwayemioluwasesan.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
    - host: grafana.oluwayemioluwasesan.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-grafana
                port:
                  number: 80
    
  # tls:
  #   - hosts:
  #     - www.oluwayemioluwasesan.me
  #     secretName: oluwayemi-stage
